See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.71.00

              pnmpsnr: Add -rgb.

              pbmtoepson: fix -protocol option - never works and sometimes
              crashes program.  Always broken (-protocol was new in Netpbm
              10.23 (July 2004).

              pbmtoppa: fix buffer overruns, double-free crashes.  Always
              broken (pbmtoppa was new in Netpbm 9.1 (March 2000).

              pbmtomatrixorbital: fix bug: fails if you specify the input
              file name argument.  Always broken.  (pbmtomatrixorbital was
              new in Netpbm 10.18 (Setpember 2003).

              sbigtopgm: fix detection of camera type.  Always broken
              (sbigtopgm was new in Netpbm 8.3 (March 2000)).

              sbigtopgm: fix recognition of compressed image.  Broken in
              Netpbm 10.70 (March 2015).

              pbmtogo: Fix bug: garbage first row.  Broken at least since
              November 1989.

              pbmtogo: Fix bug: buffer overrun with certain input.  Broken
              at least since November 1989.

              pbmtoescp2: Fix bug: overrun on certain input.  Always broken
              (pbmtoescp2 was new in Netpbm 10.18 (September 2003)).

              escp2topbm: Fix buffer overrun on certain input.  Always broken
              (escp2topbm was new in Netpbm 10.18 (September 2003)).

              libnetpbm: pm_stripeq: fix bug: wild pointer access when
              comparator is shorter than comparand.  Doesn't affect function,
              but could cause crash or privacy exposure.  Affects reading of a
              PAM file by any program.  Introduced in one of Netpbm 10.27
              (March 2005) through 10.35 (August 2006).

              pnmconvol: Fix bug: wrong output for pixels that convolve to
              negative values (should be clipped to zero).  Introduced in